[tool.poetry]
	name = "pluserable"
	version = "0.10.1.dev1"
	description = "Generic user registration for the Pyramid web framework"
	authors = ["Nando Florestan <nandoflorestan@gmail.com>"]
	license = "BSD"
	repository = "https://github.com/nandoflorestan/pluserable"
	documentation = "http://docs.nando.audio/pluserable/latest/"
	classifiers = [
		# https://pypi.org/pypi?:action=list_classifiers
		"Development Status :: 5 - Production/Stable",
		"Intended Audience :: Developers",
		"License :: OSI Approved :: BSD License",
		"Operating System :: OS Independent",
		"Programming Language :: Python",
		"Programming Language :: Python :: 3",
		"Programming Language :: Python :: 3.9",
		"Programming Language :: Python :: 3.10",
		"Programming Language :: Python :: 3.11",
		"Programming Language :: Python :: Implementation :: CPython",
		"Programming Language :: Python :: Implementation :: PyPy",
		"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
		"Topic :: Software Development :: Libraries :: Python Modules",
	]
	# A list of keywords (max: 5) that the package is related to
	keywords = ["authentication", "horus", "pyramid", "user", "registration"]

[tool.poetry.dependencies]
	python = ">= 3.9"
	# https://python-poetry.org/docs/dependency-specification/
	bag = ">= 5.0.0"
	kerno = ">= 0.7.0"
	sqlalchemy = "*"
	transaction = "*"
	redis = "*"
	# cryptacular = "*"
	passlib = "*"
	deform = "*"
	pyramid = ">= 2.0"
	pyramid_mailer = "*"
	pyramid_mako = "*"
	"zope.interface" = "*"

[tool.poetry.dev-dependencies]
	paste = "*"
	pytest = "*"
	webtest = "*"

[build-system]
	requires = ["poetry-core>=1.0.0"]
	build-backend = "poetry.core.masonry.api"
